# breeze-lim

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  breeze-lim.json  breezebuttonlim.cpp  breezebuttonlim.h  breezedecorationlim.cpp  breezedecorationlim.h
src/KDecoration2Lim/: appmenumodel.cpp  decoratedclient.cpp  decoratedclient.h  decoration.cpp  decoration.h  decorationbutton.cpp  decorationbutton.h  decorationbuttongroup.cpp  decorationbuttongroup.h  decorationdefines.h  decorationsettings.cpp  decorationsettings.h
src/KDecoration2Lim/private/: decoratedclientprivate.cpp  decoratedclientprivate.h
src/KWinLim/: decoratedclient.cpp  decoratedclient.h
src/breeze/: breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezesizegrip.cpp
src/config/: breezelimdecorationconfig.desktop
src/libbreezecommon/: CMakeLists.txt
